@@ -24,7 +24,7 @@
 {\*\soutlvl{\listlevel\levelnfc23\leveljc0\levelstartat1\levelfollow0{\leveltext \'01\u8226 ?;}{\levelnumbers;}\f5\fs18\f5\fs18\f5\fs18\f5\fi-283\li7070}}\listid1}
 }{\listoverridetable{\listoverride\listid1\listoverridecount0\ls0}}
 
-{\info{\author Bob Friesenhahn}{\creatim\yr2003\mo11\dy30\hr23\min24}{\author Bob Friesenhahn}{\revtim\yr2017\mo1\dy1\hr13\min47}{\printim\yr0\mo0\dy0\hr0\min0}{\comment StarWriter}{\vern3200}}\deftab1253\lytprtmet
+{\info{\author Bob Friesenhahn}{\creatim\yr2003\mo11\dy30\hr23\min24}{\author Bob Friesenhahn}{\revtim\yr2017\mo6\dy24\hr13\min13}{\printim\yr0\mo0\dy0\hr0\min0}{\comment StarWriter}{\vern3200}}\deftab1253\lytprtmet
 {\*\pgdsctbl
 {\pgdsc0\pgdscuse195\pgwsxn12240\pghsxn15840\marglsxn1800\margrsxn1800\margtsxn1440\margbsxn1440\pgdscnxt0 Standard;}
 {\pgdsc1\pgdscuse195\pgwsxn11905\pghsxn16837\marglsxn1134\margrsxn567\margtsxn567\margbsxn567\pgdscnxt1 HTML;}
@@ -37,7 +37,6 @@ r to installing the newer version.}
 \par \pard\plain \ltrpar\s2\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sa144\ql\rtlch\af7\afs24\lang255\ltrch\dbch\af4\langfe255\hich\f1\fs20\lang1033\loch\f1\fs20\lang1033{\rtlch \ltrch\loch\f1\fs20\lang1033\i0\b0\ltrch\hich\f6\loch\f6 While it is not a requirement, it is recommended that the {\field{\*\fldinst HYPERLINK "http://www.ghostscript.com/download/" }{\fldrslt \*\cs9\cf2\ul\ulc0\rtlch\ltrch\dbch\hich\f1\fs24\lang1033\loch\f1\fs24\lang1033 Ghostscript}} package be installed (but take care to read Ghostscript license first!). The Ghostscript binary (WIN32/WIN64) should match the GraphicsMagick binary architecture. Both WIN32 and WIN64 ve
 rsions may be installed at the same time without conflict. GraphicsMagick uses Ghostscript to render Postscript and PDF files, as well as formats where a translator to Postscript is available. GraphicsMagick will also use the fonts delivered with Ghostscri
 pt to support the standard set of Adobe Postscript fonts like "Helvetica" and "Times Roman".}
-\par \pard\plain \ltrpar\s2\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sa144\ql\rtlch\af7\afs24\lang255\ltrch\dbch\af4\langfe255\hich\f1\fs20\lang1033\loch\f1\fs20\lang1033{\rtlch \ltrch\loch\f1\fs20\lang1033\i0\b0{\ltrch\hich\f6\loch\f6 The installation package includes the GraphicsMagick Perl extension ( }}{\rtlch \ltrch\loch\f1\fs20\lang1033\i0\b0{\ltrch\hich\f6\loch\f6{\field{\*\fldinst HYPERLINK "http://www.graphicsmagick.org/www/perl.html" }{\fldrslt \*\cs9\cf2\ul\ulc0\rtlch\ltrch\dbch\hich\f1\fs24\lang1033\loch\f1\fs24\lang1033 PerlMagick}{\ltrch\hich\f6\loch\f6}} ) as an installation option. If you would like to use this extension, then you must install }{\ltrch\hich\f6\loch\f6{\field{\*\fldinst HYPERLINK "http://www.activestate.com/activeperl/downloads" }{\fldrslt \*\cs9\cf2\ul\ulc0\rtlch\ltrch\dbch\hich\f1\fs24\lang1033\loch\f1\fs24\lang1033 ActiveState ActivePerl}{\ltrch\hich\f6\loch\f6}}  prior to commencing with installation of GraphicsMagick. }}
 \par \pard\plain \sb245\sa144\keepn\f6\fs20\b\b\b\qc \ltrpar\s5\cf1\qc{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sb245\sa144\keepn\rtlch\afs24\lang255\ab\ltrch\dbch\langfe255\hich\f6\fs20\lang1033\b\loch\f6\fs20\lang1033\b {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b Installation Steps}
 \par \pard\plain \ltrpar\s1\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\ql\rtlch\af7\afs24\lang255\ltrch\dbch\af4\langfe255\hich\f6\fs20\lang1033\loch\f6\fs20\lang1033 {\rtlch \ltrch\loch  }{\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b0 The following describes the steps remaining to install GraphicsMagick.}
 \par \pard\plain \sb245\sa144\keepn\f6\fs20\b\b\b \ltrpar\s5\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sb245\sa144\keepn\ql\rtlch\afs24\lang255\ab\ltrch\dbch\langfe255\hich\f6\fs20\lang1033\b\loch\f6\fs20\lang1033\b {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b Select Destination Directory}
@@ -48,7 +47,6 @@ tly how much space is required to install the complete package. The default inst
 \par \pard\plain \sb245\sa144\keepn\f6\fs20\b\b\b \ltrpar\s5\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sb245\sa144\keepn\ql\rtlch\afs24\lang255\ab\ltrch\dbch\langfe255\hich\f6\fs20\lang1033\b\loch\f6\fs20\lang1033\b {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b Select Additional Tasks}
 \par \pard\plain \ltrpar\s2\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sa144\ql\rtlch\af7\afs24\lang255\ltrch\dbch\af4\langfe255\hich\f6\fs20\lang1033\loch\f6\fs20\lang1033 {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b0 A screen is displayed which presents options similar to the following:}
 \par \pard\plain {\listtext\pard\plain \li707\ri0\lin707\rin0\fi-283\sa144\f6\fs20\f5\fs18\f5\fs18\f5\fs18 \'95\tab}\ilvl0 \ltrpar\s2\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\ls0\aspalpha\li707\ri0\lin707\rin0\fi-283\sa144\ql\rtlch\af7\afs24\lang255\ltrch\dbch\af4\langfe255\hich\f6\fs20\lang1033\loch\f6\fs20\lang1033 {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b0 Update executable search path}
-\par \pard\plain {\listtext\pard\plain \li707\ri0\lin707\rin0\fi-283\sa144\f6\fs20\f5\fs18\f5\fs18\f5\fs18 \'95\tab}\ilvl0 \ltrpar\s2\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sa144\ql\rtlch\af7\afs24\lang255\ltrch\dbch\af4\langfe255\hich\f1\fs20\lang1033\loch\f1\fs20\lang1033 {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b0 Install PerlMagick for ActiveState Perl v5.14.2}
 \par \pard\plain \ltrpar\s2\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sa144\ql\rtlch\af7\afs24\lang255\ltrch\dbch\af4\langfe255\hich\f6\fs20\lang1033\loch\f6\fs20\lang1033 {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b0 "Update the executable search path" is selected by default. The remaining options default to un-selected. Select the options you prefer.}
 \par \pard\plain \ltrpar\s2\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sa144\ql\rtlch\af7\afs24\lang255\ltrch\dbch\af4\langfe255\hich\f1\fs20\lang1033\loch\f1\fs20\lang1033 {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b0 Once you have made your selections, click on \'93Next>\'94 to continue. }
 \par \pard\plain \sb245\sa144\keepn\f6\fs20\b\b\b \ltrpar\s5\cf1{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\aspalpha\sb245\sa144\keepn\ql\rtlch\afs24\lang255\ab\ltrch\dbch\langfe255\hich\f6\fs20\lang1033\b\loch\f6\fs20\lang1033\b {\rtlch \ltrch\loch\f6\fs20\lang1033\i0\b Ready to Install}
