@@ -38,6 +38,9 @@
 <p>2017-06-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>VisualMagick/installer/gm-foo-dll.iss: Remove PerlMagick from
+the slim Inno Setup installer builder and remove mention of
+PerlMagick from the installer documentation.</li>
 <li>TclMagick/generic/TclMagick.c (magickCmd): Resolve SourceForge
 patch #51 &quot;TclMagick: memory access error; possible segfault&quot;.
 (newMagickObj): Fix formatting of pointer value so it is 64-bit
