@@ -100,11 +100,6 @@ installing a 64-bit GraphicsMagick, you should install a 64-bit
 Ghostscript.  The installation order of the two packages is not
 important.  Both 32 and 64-bit versions of GraphicsMagick and
 Ghostscript may be installed at the same time.</p>
-<p>The installation package includes the GraphicsMagick Perl extension
-( <a class="reference external" href="perl.html">PerlMagick</a>) as an installation option. If you would
-like to use this extension, then you must install <a class="reference external" href="http://www.activestate.com/activeperl/downloads/">ActiveState
-ActivePerl</a>
-prior to commencing with installation of GraphicsMagick.</p>
 </blockquote>
 </div>
 <div class="section" id="retrieve-install-package">
@@ -113,7 +108,7 @@ prior to commencing with installation of GraphicsMagick.</p>
 <p>Retrieve the GraphicsMagick Windows binary install package from a one
 of the ftp sites listed at the <a class="reference external" href="download.html">GraphicsMagick Download Sites</a> page. The available install packages are as follows</p>
 <p>Windows Dynamic-Multithread (DLL-based) install package with utilities,
-PerlMagick, ImageMagickObject COM object, and web pages:</p>
+ImageMagickObject COM object, and web pages:</p>
 <blockquote>
 <pre class="literal-block">
 GraphicsMagick-1.3-Q8-win32-dll.exe
@@ -179,16 +174,12 @@ options:</p>
 <li>Create a desktop icon</li>
 <li>Update executable search path</li>
 <li>Associate supported file extensions with GraphicsMagick</li>
-<li>Install PerlMagick for ActiveState Perl v5.14.2 build 1402</li>
 <li>Install ImageMagickObject OLE Control for VBscript, Visual Basic,
 and WSH.</li>
 </ul>
 <p>&quot;Creating a desktop icon&quot; and &quot;Update the executable search path&quot;
 are selected by default. The remaining options default to
-un-selected.  Select the options you prefer. Note that ActiveState
-Perl packages are intended to be binary compatible across a build
-series.  See the ActiveState Perl documentation for more information
-on this topic.</p>
+un-selected.  Select the options you prefer.</p>
 <p>Think twice before selecting &quot;<em>Associate supported file extensions with
 GraphicsMagick</em>&quot; since this will set up approximately fifty file
 associations, including common formats like JPEG, GIF, PNG, TIFF, and
@@ -634,7 +625,8 @@ the GraphicsMagick documentation.</p>
 <p>The following are the instructions for how to build a Q:8 (or Q:16)
 DLL-based distribution installer package using Visual Studio 2008
 Professional.  This is the same procedure used to produce the
-release packages:</p>
+release packages.  The PerlMagick steps are skipped as of
+GraphicsMagick 1.3.26):</p>
 <ol class="arabic simple">
 <li>Install prerequisite software:</li>
 </ol>
@@ -643,7 +635,7 @@ release packages:</p>
 <li>Install Microsoft Visual Studio.</li>
 <li>Download and install Inno Setup 5
 &lt;&quot;<a class="reference external" href="http://www.jrsoftware.org/isinfo.php">http://www.jrsoftware.org/isinfo.php</a>&quot;&gt;.</li>
-<li>Download and install ActiveState ActivePerl
+<li>Download and install ActiveState ActivePerl (optional)
 &lt;&quot;<a class="reference external" href="http://www.activestate.com/activeperl/downloads/">http://www.activestate.com/activeperl/downloads/</a>&quot;&gt;.</li>
 </ol>
 </blockquote>
@@ -716,7 +708,7 @@ project.</li>
 <li><tt class="docutils literal">cd <span class="pre">..\..\..\..</span></tt></li>
 </ol>
 </li>
-<li><p class="first">Build PerlMagick extension</p>
+<li><p class="first">Build PerlMagick extension (optional)</p>
 <ol class="loweralpha">
 <li><p class="first">Open Visual Studio Command Shell Window for WIN32  or WIN64</p>
 </li>
@@ -748,7 +740,7 @@ double-clicking from Windows Explorer.<ol class="loweralpha">
 <li>Test install by clicking on green triangle</li>
 </ol>
 </li>
-<li>Test PerlMagick.<ol class="loweralpha">
+<li>Test PerlMagick (optional).<ol class="loweralpha">
 <li><tt class="docutils literal">cd PerlMagick</tt></li>
 <li><tt class="docutils literal">nmake test</tt> (All tests must pass!)</li>
 </ol>
